Fixed bug: unnecessary scrollbar

--- a/src/Components/Dapp/Login/login.css
+++ b/src/Components/Dapp/Login/login.css
@@ -1,5 +1,5 @@
 .login {
-    min-height: 100%;
+    height: 100vh;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
